Refactor ServiceXmlParserFactory to use VFS listener-based cache tracker for service container parsing.